[feat]add normal swag exercise
